--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         shape="rect">
       <area alt="Administration office" title="Administration office" href="administration.html"
         coords="571,130,849,179" shape="rect">
-      <area alt="Link hub" title="Link hub" href="linkhub.html" coords="881,126,992,242" shape="rect">
+      <area alt="Link hub" title="Link hub" href="https://x.com/thesolgone" coords="881,126,992,242" shape="rect">
       <area alt="Concert hall" title="Concert hall" href="concerthall.html" coords="612,376,920,417" shape="rect">
       <area alt="Spaceship" title="Spaceship" href="spaceship.html" coords="655,281,804,359" shape="rect">
       <area alt="Arcade" title="Arcade" href="arcade.html" coords="533,446,919,494" shape="rect">
